--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,6 +1,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+     <item android:id="@+id/menu_new"
+        android:title="@string/menu_new"
+        android:orderInCategory="1"
+		android:showAsAction="ifRoom|withText" 
+		android:icon="@drawable/menu_new_icon" />
+    <item android:id="@+id/menu_save"
+        android:title="@string/menu_save"
+        android:orderInCategory="2"
+        android:showAsAction="ifRoom|withText"
+		android:icon="@drawable/menu_save_icon" />
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/menu_help"
+        android:title="@string/menu_help"
+        android:orderInCategory="101"
+        android:showAsAction="never" /> 
+    
 </menu>
