--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -3,7 +3,8 @@
         android:title="@string/menu_new"
         android:orderInCategory="1"
 		android:showAsAction="ifRoom|withText" 
-		android:icon="@drawable/menu_new_icon" />
+		android:icon="@drawable/menu_new_icon">
+    </item>
     <item android:id="@+id/menu_save"
         android:title="@string/menu_save"
         android:orderInCategory="2"
