--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,22 +1,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-     <item android:id="@+id/menu_new"
+    <item android:id="@+id/menu_holoken"
+        android:title="@string/menu_holoken"
+        android:orderInCategory="1"/>
+    <item android:id="@+id/menu_new"
         android:title="@string/menu_new"
-        android:orderInCategory="1"
-		android:showAsAction="ifRoom|withText" 
-		android:icon="@drawable/menu_new_icon">
-    </item>
+        android:orderInCategory="2"/>
+    <!--item android:id="@+id/calculator"
+        android:title="@string/menu_calculator"
+        android:orderInCategory="3"
+        android:icon="@drawable/menu_calculator_icon"/-->
     <item android:id="@+id/menu_save"
         android:title="@string/menu_save"
-        android:orderInCategory="2"
-        android:showAsAction="ifRoom|withText"
+        android:orderInCategory="4"
 		android:icon="@drawable/menu_save_icon" />
+    <item android:id="@+id/menu_stats"
+        android:title="@string/menu_stats"
+        android:orderInCategory="5"/>
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:orderInCategory="100"/>
     <item android:id="@+id/menu_help"
         android:title="@string/menu_help"
-        android:orderInCategory="101"
-        android:showAsAction="never" /> 
+        android:orderInCategory="101" /> 
     
 </menu>
