--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,19 +7,19 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 	
-	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<RelativeLayout
 	    android:id="@+id/titlecontainer"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:padding="5dp"
 	    tools:context=".MainActivity">
     
-	    <TextView android:id="@+id/puzzletitle"
+	    <TextView android:id="@+id/appname"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"
-	              android:text="9x9 (Ultimate)"
-				  android:layout_alignParentLeft="true"
-	        	  android:layout_toLeftOf="@+id/playtime" />
+	              android:text="@string/app_name"
+	              android:textStyle="bold"
+				  android:layout_alignParentLeft="true"/>
 	    <TextView android:id="@+id/playtime"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"
@@ -32,16 +32,49 @@
 	    	  android:layout_height="300dp"
 	    	  android:layout_gravity="center_horizontal"/>
     
-	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="wrap_content"
-		android:layout_height="0dip"
-		android:layout_gravity="center"
-		android:shrinkColumns="*"
-		android:stretchColumns="*"
-		android:orientation="horizontal"
-		android:layout_weight='1.0' >
+    <LinearLayout 
+       	android:layout_width="fill_parent" 
+    	android:layout_height="0dip"
+    	android:layout_weight="1">
 		
-	    <TableRow android:layout_weight='1.0'>
+		<RadioGroup android:id="@+id/modebuttons"
+		    android:layout_width="wrap_content"
+		    android:layout_height="fill_parent"
+		    android:orientation="vertical">
+	    
+		    <RadioButton android:id="@+id/button_pen"
+		        android:text=""
+		        android:layout_width="64dp"
+		        android:layout_height="wrap_content"
+		        android:button="@drawable/button_pen"
+		        android:background="@drawable/radio_button"
+		    	android:layout_weight="1"
+		    	android:checked="true"/>
+		    <RadioButton android:id="@+id/button_pencil"
+		        android:layout_width="64dp"
+		        android:layout_height="wrap_content"
+		        android:button="@drawable/button_pencil"
+		        android:text=""
+		        android:background="@drawable/radio_button"
+		    	android:layout_weight="1"/>
+		    <RadioButton android:id="@+id/button_eraser"
+		        android:layout_width="64dp"
+		        android:layout_height="wrap_content"
+		        android:button="@drawable/button_eraser"
+		        android:text=""
+		        android:background="@drawable/radio_button"
+		    	android:layout_weight="1"/>
+		</RadioGroup>    
+		
+	<TableLayout 
+		android:layout_width="0dip"
+		android:layout_height="fill_parent"
+		android:orientation="horizontal"
+ 		android:shrinkColumns="*"
+     	android:stretchColumns="*"		
+		android:layout_weight="1">
+		
+	    <TableRow android:layout_weight="1">
 			<Button android:id="@+id/button1"
 			    	android:text="@string/number1"
 			    	android:layout_height="fill_parent"
@@ -54,13 +87,10 @@
 			    	android:text="@string/number3"
 			    	android:layout_height="fill_parent"
 			    	android:background="@drawable/keypad_button"/>
-			<ImageButton android:id="@+id/button_pen"
-			    	android:src="@drawable/button_pen"
-			    	android:layout_height="fill_parent"
-			    	android:background="@drawable/mode_button"/>
+
 		</TableRow>
 		
-	    <TableRow android:layout_weight='1.0'>
+	    <TableRow android:layout_weight="1">
 			<Button android:id="@+id/button4"
 			    	android:text="@string/number4"
 			    	android:layout_height="fill_parent"
@@ -73,13 +103,9 @@
 			    	android:text="@string/number6"
 			    	android:layout_height="fill_parent"
 			    	android:background="@drawable/keypad_button"/>
-			<ImageButton android:id="@+id/button_pencil"
-			    	android:src="@drawable/button_pencil"
-			    	android:layout_height="fill_parent"
-			    	android:background="@drawable/mode_button"/>
 		</TableRow>
 		
-	    <TableRow android:layout_weight='1.0'>
+	    <TableRow android:layout_weight="1">
 			<Button android:id="@+id/button7"
 			    	android:text="@string/number7"
 			    	android:layout_height="fill_parent"
@@ -92,12 +118,11 @@
 			    	android:text="@string/number9"
 			    	android:layout_height="fill_parent"
 			    	android:background="@drawable/keypad_button"/>
-			<ImageButton android:id="@+id/button_eraser"
-			    	android:src="@drawable/button_eraser"
-			    	android:layout_height="fill_parent"
-			    	android:background="@drawable/mode_button"/>
 		</TableRow>
+
 	</TableLayout>
+	
+	</LinearLayout>
 	
 	<TableLayout android:id="@+id/actionBar"
     		     android:layout_height="34dp"
@@ -108,11 +133,11 @@
     		     android:background="@drawable/menu_button">
 	    
 	    <TableRow>
-		    <ImageButton android:id="@+id/icon_new"
-		        		 android:src="@drawable/menu_new_icon"
+		    <ImageButton android:id="@+id/icon_replay"
+		        		 android:src="@drawable/menu_replay_icon"
 		        		 android:background="@drawable/menu_button"/>
-		    <ImageButton android:id="@+id/icon_save"
-		        		 android:src="@drawable/menu_save_icon"
+		    <ImageButton android:id="@+id/icon_pause"
+		        		 android:src="@drawable/menu_pause_icon"
 		        		 android:layout_height="fill_parent"
 		        		 android:background="@drawable/menu_button"/>
 		    <ImageButton android:id="@+id/icon_hint"
@@ -123,5 +148,6 @@
 		        		 android:background="@drawable/menu_button"/>
 	    </TableRow>
 	</TableLayout>
+
 </LinearLayout>
 
