--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -49,15 +49,18 @@
 		    <TableRow android:layout_weight="1.0">
 				<Button android:id="@+id/button1"
 				    	android:text="@string/number1"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 				<Button android:id="@+id/button2"
 				    	android:text="@string/number2"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 				<Button android:id="@+id/button3"
 				    	android:text="@string/number3"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 	
 			</TableRow>
@@ -65,30 +68,36 @@
 		    <TableRow android:layout_weight="1.0">
 				<Button android:id="@+id/button4"
 				    	android:text="@string/number4"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 				<Button android:id="@+id/button5"
 				    	android:text="@string/number5"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 				<Button android:id="@+id/button6"
 				    	android:text="@string/number6"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 			</TableRow>
 			
 		    <TableRow android:layout_weight="1.0">
 				<Button android:id="@+id/button7"
 				    	android:text="@string/number7"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 				<Button android:id="@+id/button8"
 				    	android:text="@string/number8"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 				<Button android:id="@+id/button9"
 				    	android:text="@string/number9"
-						android:layout_height="fill_parent"
+			    		android:layout_height="fill_parent"
+			    		android:layout_width="fill_parent"
 				    	android:background="@drawable/keypad_button"/>
 			</TableRow>   
 		</TableLayout>
@@ -131,22 +140,26 @@
 		
 			    <ImageButton android:id="@+id/icon_new"
 			        		 android:src="@drawable/menu_new_icon"
-							android:layout_height="fill_parent"
+							 android:layout_height="fill_parent"
+							 android:layout_width="wrap_content"
 			        		 android:background="@drawable/menu_button"
 			        		 android:layout_weight="1"/>
 			    <ImageButton android:id="@+id/icon_replay"
 			        		 android:src="@drawable/menu_replay_icon"
-						android:layout_height="fill_parent"
+							 android:layout_height="fill_parent"
+							 android:layout_width="wrap_content"
 			        		 android:background="@drawable/menu_button"
 			        		 android:layout_weight="1"/>
 			    <ImageButton android:id="@+id/icon_hint"
 			        		 android:src="@drawable/menu_hint_icon"
 			        		 android:background="@drawable/menu_button"
-						android:layout_height="fill_parent"
+							 android:layout_height="fill_parent"
+							 android:layout_width="wrap_content"
 			        		 android:layout_weight="1"/>
 			    <ImageButton android:id="@+id/icon_overflow"
 							 android:src="@drawable/menu_overflow_icon"
-						android:layout_height="fill_parent"
+							 android:layout_height="fill_parent"
+							 android:layout_width="wrap_content"
 			        		 android:background="@drawable/menu_button"
 			        		 android:layout_weight="1"/>
 		</LinearLayout>
