--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -34,7 +34,7 @@
 		    <TextView android:id="@+id/playtime"
 		              android:layout_width="wrap_content"
 		              android:layout_height="wrap_content"
-		              android:text="00:00:00"
+		              android:text="@string/time_zero"
 					  android:layout_alignParentRight="true"/>	
 		</RelativeLayout>	
 					  
