--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,7 +11,9 @@
 	    android:id="@+id/titlecontainer"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:padding="2dp"
+	    android:paddingTop="2dp"
+	    android:paddingLeft="3dp"
+	    android:paddingRight="3dp"
 	    tools:context=".MainActivity">
     
 	    <TextView android:id="@+id/appname"
@@ -23,7 +25,7 @@
 	    <TextView android:id="@+id/playtime"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"
-	              android:text="00:00:00"
+	              android:text="@string/time_zero"
 				  android:layout_alignParentRight="true"/>
     </RelativeLayout>
     
@@ -136,7 +138,7 @@
 	</LinearLayout>
 	
 	<LinearLayout android:id="@+id/actionBar"
-    		     android:layout_height="36dp"
+    		     android:layout_height="38dp"
     		     android:layout_width="fill_parent"
 			     android:orientation="horizontal"
 			     android:paddingTop="2dp"
