--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -40,10 +40,10 @@
 			android:summaryOn="@string/setting_pencil_3x3_summary_on"
 			android:summaryOff="@string/setting_pencil_3x3_summary_off"
 			android:defaultValue="true" />
-		<!--CheckBoxPreference
-			android:key="keypaddisplay"
-			android:title="@string/setting_keypad_display_title"
-			android:defaultValue="false" /-->
+		<CheckBoxPreference
+			android:key="showtimer"
+			android:title="@string/setting_show_timer_title"
+			android:defaultValue="true" />
 		<CheckBoxPreference
 			android:key="showfullscreen"
 			android:title="@string/setting_show_fullscreen_title"
