(R7) Changed out 'Show operators' to work in-game

--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -9,13 +9,14 @@
 			android:entries="@array/setting_default_game_grid_entries"
 			android:entryValues="@array/setting_default_game_grid_values"
 			android:defaultValue="ask"  />
-		<CheckBoxPreference
-		    android:key="showoperators"
-			android:title="@string/setting_show_operators_title"
-			android:defaultValue="true"  />
 	</PreferenceCategory>
 	
 	<PreferenceCategory android:title="@string/settings_group_assistance" android:key="Assistance">
+	    <CheckBoxPreference
+		    android:key="showoperators"
+			android:title="@string/setting_show_operators_title"
+			android:summary="@string/setting_show_operators_summary"
+			android:defaultValue="true"  />
 		<CheckBoxPreference
 			android:key="badmaths"
 			android:title="@string/setting_flag_bad_maths_title"
