--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -22,19 +22,22 @@
 		    android:id="@+id/titlecontainer"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
-		    android:padding="2dp">
+		    android:padding="2dp"
+			android:background="@drawable/menu_button">
 	   
 		    <TextView android:id="@+id/appname"
 		              android:layout_width="wrap_content"
 		              android:layout_height="wrap_content"
 		              android:text="@string/app_name"
 		              android:textStyle="bold"
-					  android:layout_alignParentLeft="true"/>
+					  android:layout_alignParentLeft="true"
+				      android:textColor="#CCFFFFFF"/>
 		    <TextView android:id="@+id/playtime"
 		              android:layout_width="wrap_content"
 		              android:layout_height="wrap_content"
 		              android:text="@string/time_zero"
-					  android:layout_alignParentRight="true"/>	
+					  android:layout_alignParentRight="true"
+				      android:textColor="#CCFFFFFF"/>
 		</RelativeLayout>	
 					  
 		<TableLayout 
