--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
 	    android:paddingTop="2dp"
 	    android:paddingLeft="3dp"
 	    android:paddingRight="3dp"
+	    android:background="@drawable/menu_button"
 	    tools:context=".MainActivity">
     
 	    <TextView android:id="@+id/appname"
@@ -21,12 +22,14 @@
 	              android:layout_height="wrap_content"
 	              android:text="@string/app_name"
 	              android:textStyle="bold"
-				  android:layout_alignParentLeft="true"/>
+				  android:layout_alignParentLeft="true"
+				  android:textColor="#CCFFFFFF"/>
 	    <TextView android:id="@+id/playtime"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"
 	              android:text="@string/time_zero"
-				  android:layout_alignParentRight="true"/>
+				  android:layout_alignParentRight="true"
+				  android:textColor="#CCFFFFFF"/>
     </RelativeLayout>
     
     <net.mathdoku.holoken.GridView android:id="@+id/gridview"
