--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,13 +23,13 @@
 	              android:text="@string/app_name"
 	              android:textStyle="bold"
 				  android:layout_alignParentLeft="true"
-				  android:textColor="#CCFFFFFF"/>
+				  android:textColor="#CFFF"/>
 	    <TextView android:id="@+id/playtime"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"
 	              android:text="@string/time_zero"
 				  android:layout_alignParentRight="true"
-				  android:textColor="#CCFFFFFF"/>
+				  android:textColor="#CFFF"/>
     </RelativeLayout>
     
     <net.mathdoku.holoken.GridView android:id="@+id/gridview"
