--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -43,64 +43,46 @@
 		<TableLayout 
 			android:layout_width="fill_parent"
 			android:layout_height="0dip"
-			android:orientation="vertical"
+			android:orientation="horizontal"
 	 		android:shrinkColumns="*"
 	     	android:stretchColumns="*"
-	     	android:layout_weight="1.0">
+	     	android:layout_weight="1.0"
+	     	android:layout_marginLeft="1dp">
 			
 		    <TableRow android:layout_weight="1.0">
-				<Button android:id="@+id/button1"
-				    	android:text="@string/number1"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
-				<Button android:id="@+id/button2"
-				    	android:text="@string/number2"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
-				<Button android:id="@+id/button3"
-				    	android:text="@string/number3"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
-	
+		        <Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button1"
+			            android:text="@string/number1" />
+				<Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button2"
+			            android:text="@string/number2" />
+				<Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button3"
+			            android:text="@string/number3" />
 			</TableRow>
 			
 		    <TableRow android:layout_weight="1.0">
-				<Button android:id="@+id/button4"
-				    	android:text="@string/number4"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
-				<Button android:id="@+id/button5"
-				    	android:text="@string/number5"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
-				<Button android:id="@+id/button6"
-				    	android:text="@string/number6"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
+		        <Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button4"
+			            android:text="@string/number4" />
+				<Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button5"
+			            android:text="@string/number5" />
+				<Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button6"
+			            android:text="@string/number6" />
 			</TableRow>
 			
 		    <TableRow android:layout_weight="1.0">
-				<Button android:id="@+id/button7"
-				    	android:text="@string/number7"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
-				<Button android:id="@+id/button8"
-				    	android:text="@string/number8"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
-				<Button android:id="@+id/button9"
-				    	android:text="@string/number9"
-			    		android:layout_height="fill_parent"
-			    		android:layout_width="fill_parent"
-				    	android:background="@drawable/keypad_button"/>
+		        <Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button7"
+			            android:text="@string/number7" />
+				<Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button8"
+			            android:text="@string/number8" />
+				<Button style="@style/KeypadButton.Dark"
+			            android:id="@+id/button9"
+			            android:text="@string/number9" />
 			</TableRow>   
 		</TableLayout>
 		
@@ -110,28 +92,22 @@
 			android:orientation="horizontal"
 			android:layout_weight="0.15">
 	
-			<RadioButton android:id="@+id/button_pen"
-				android:text=""
-				android:layout_width="64dp"
-				android:layout_height="fill_parent"
-				android:button="@drawable/button_pen"
-				android:background="@drawable/radio_button"
-				android:checked="true"
-			    android:layout_weight="1"/>
-			<RadioButton android:id="@+id/button_pencil"
-				android:layout_width="64dp"
-				android:layout_height="fill_parent"
-				android:button="@drawable/button_pencil"
-				android:text=""
-				android:background="@drawable/radio_button"
-			    android:layout_weight="1"/>
-			<RadioButton android:id="@+id/button_eraser"
-				android:layout_width="64dp"
-				android:layout_height="fill_parent"
-				android:button="@drawable/button_eraser"
-				android:text=""
-				android:background="@drawable/radio_button"
-			    android:layout_weight="1"/>
+		    <RadioButton style="@style/RadioButton.Dark"
+		        android:id="@+id/button_pen"
+		        android:button="@drawable/button_pen"
+		        android:layout_height="fill_parent"
+		    	android:layout_weight="1"
+		    	android:checked="true"/>
+		    <RadioButton style="@style/RadioButton.Dark"
+		        android:id="@+id/button_pencil"
+		        android:button="@drawable/button_pencil"
+		        android:layout_height="fill_parent"
+		    	android:layout_weight="1"/>
+		    <RadioButton style="@style/RadioButton.Dark"
+		        android:id="@+id/button_eraser"
+		        android:button="@drawable/button_eraser"
+		        android:layout_height="fill_parent"
+		    	android:layout_weight="1"/>
 		</RadioGroup>    
 	
 		
@@ -140,30 +116,22 @@
 	    	android:layout_height="38dp"
 			android:orientation="horizontal">
 		
-			    <ImageButton android:id="@+id/icon_new"
-			        		 android:src="@drawable/menu_new_icon"
-							 android:layout_height="fill_parent"
-							 android:layout_width="wrap_content"
-			        		 android:background="@drawable/menu_button"
-			        		 android:layout_weight="1"/>
-			    <ImageButton android:id="@+id/icon_replay"
-			        		 android:src="@drawable/menu_replay_icon"
-							 android:layout_height="fill_parent"
-							 android:layout_width="wrap_content"
-			        		 android:background="@drawable/menu_button"
-			        		 android:layout_weight="1"/>
-			    <ImageButton android:id="@+id/icon_hint"
-			        		 android:src="@drawable/menu_hint_icon"
-			        		 android:background="@drawable/menu_button"
-							 android:layout_height="fill_parent"
-							 android:layout_width="wrap_content"
-			        		 android:layout_weight="1"/>
-			    <ImageButton android:id="@+id/icon_overflow"
-							 android:src="@drawable/menu_overflow_icon"
-							 android:layout_height="fill_parent"
-							 android:layout_width="wrap_content"
-			        		 android:background="@drawable/menu_button"
-			        		 android:layout_weight="1"/>
+		    <ImageButton style="@style/MenuButton"
+		        		 android:id="@+id/icon_new"
+		        		 android:src="@drawable/menu_new_icon"
+		        		 android:layout_weight="1"/>
+		    <ImageButton style="@style/MenuButton"
+		        		 android:id="@+id/icon_replay"
+		        		 android:src="@drawable/menu_replay_icon"
+		        		 android:layout_weight="1"/>
+		    <ImageButton style="@style/MenuButton"
+		        		 android:id="@+id/icon_hint"
+		        		 android:src="@drawable/menu_hint_icon"
+		        		 android:layout_weight="1"/>
+		    <ImageButton style="@style/MenuButton"
+		        		 android:id="@+id/icon_overflow"
+						 android:src="@drawable/menu_overflow_icon"
+		        		 android:layout_weight="1"/>
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
